rnsc/test_data/integration/error/parser/outside_class_directive/after_class_dir/dot_method.rns
.class public EmptyClass
.super java/lang/Object

.class_end

.method public static main ([Ljava/lang/String;)V
